source/objects/WorkforcePlanningAPILogging__c.object
<CustomObject>
    <fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseId</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>WorkforcePlanningAPILogging</relationshipLabel>
        <relationshipName>WorkforcePlanningAPILogging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncomingJson__c</fullName>
        <label>Incoming JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outgoing_JSON__c</fullName>
        <label>Outgoing JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Workforce Planning APILogging</label>
    <nameField>
        <displayFormat>WFPL-{00000000}</displayFormat>
        <label>WorkforcePlanningAPILogging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkforcePlanningAPILogging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>